--- a/.github/workflows/master_farmastic.yml
+++ b/.github/workflows/master_farmastic.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: python-app
-          path: app/app.py
+          path: Farmastic/app/app.py
             
 
   deploy:
@@ -51,7 +51,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: python-app
-          path: app/app.py
+          path: Farmastic/app/app.py
           
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
